# PI-NAS-Python

./: .dockerignore  .env.example  .gitignore  .replit  AWS_EC2_DEPLOYMENT.md  Compelete_setup_guide.md  DOCKER_LOCAL_TESTING.md  Dockerfile  QUICK_REFERENCE.md  Quick_start.md  README.md  RUN.txt  VS_CodeSetup.md  app.py  deploy-to-aws.sh  docker-compose.yml  launch.json  pyproject.toml  replit.md  requirements.txt  setup.txt
.github/workflows/: deploy.yml
.streamlit/: config.toml
config/: storage_config.json
data/: users.json
deployment/: distributed_setup_guide.md  network_configuration.md  pi_nas_setup.md  raspberry_pi_omv_guide.md  youtube_video_companion.md
media/thumbnails/: .gitkeep
pages/: 1_Media_Library.py  2_Upload_Media.py  3_Network_Storage.py  4_Settings.py
scripts/: computer_setup.sh  install_service.sh  mount_network_drive.sh  pi_setup.sh  start_pinas.sh
utils/: auth.py  file_manager.py  media_handler.py  network_storage.py
